# ITSDU

./: .env  .env-example  .eslintrc.cjs  .gitignore  LICENSE  README.md  biome.json  bun.lockb  components.json  electron-builder.json5  farm.config.ts  index.html  notes.txt  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  todo.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.zed/: settings.json
electron/: electron-env.d.ts  login_preload.ts  main.ts  main.ts_dwadwawawad  preload.ts
electron/handlers/: app-handler.ts  auth-handler.ts  dark-mode-handlers.ts  download-handler.ts  notifcation-handler.ts
electron/services/: auth-service.ts  scopes.ts
electron/utils/: cookies.ts  deeplink.ts  new-tings.ts  proxy-dev-server.ts
itsdu/: biome.json  bun.lockb  components.json  farm.config.ts  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
itsdu/src/: error-page.tsx  header-user-avatar-fullname.tsx  index.css  login.tsx  main.tsx  scrollbar-gutter-wrapper.tsx
itsdu/src-tauri/: Cargo.toml  tauri.conf.json
itsdu/src-tauri/capabilities/: default.json
itsdu/src-tauri/src/: main.rs  proxy.rs
itsdu/src-tauri/src/auth/: auth.rs  auth_env.rs  mod.rs
old/: .eslintrc.cjs  bun.lockb  electron-builder.json5  login.html  package.json  tailwind.config.js  todo.md  vite.config.ts
old/electron/: login_preload.ts  main.ts
old/src/: header-user-avatar-fullname.tsx  index.css  login.tsx  main.tsx
old_src/: error-page.tsx  scrollbar-gutter-wrapper.tsx
old_src/atoms/: courses-bulk-star-edit.ts  current-chat.ts  default-pdf-renderer.ts  user.ts
old_src/components/: browse-nav.tsx  code-block.tsx  hover-date.tsx  is-online-indicator.tsx  layout.tsx  og-image-preview.tsx  providers.tsx  unread-notifications-ping-indicator.tsx
old_src/contexts/: calendar-context.tsx  tab-button-hover-context.tsx
old_src/hooks/: useCustomPDF.ts  useMeasureScrollPosition.ts  useTabButtonHover.ts
old_src/lib/: tanstack-client.ts  utils.ts
old_src/routes/: index.tsx  overview.tsx  profile.tsx
old_src/types/: course-participants-roles.ts  navigation-link.ts
src/: App.tsx  error-page.tsx  file-drop.tsx  header-user-avatar-fullname.tsx  index.css  index.tsx  login.tsx  main.tsx  routeTree.gen.ts  scrollbar-gutter-wrapper.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: auth.rs  env.rs  mod.rs
src/atoms/: about-modal.ts  ai-sidepanel.ts  browse-nav.ts  browse-navigation.ts  command-palette.ts  course.ts  courses-bulk-star-edit.ts  current-chat.ts  default-pdf-renderer.ts  download-activity.ts  message-selected-recipients.ts  settings-modal.ts  settings.ts  sidebar.ts  update-status.ts  user.ts  version.ts
src/components/: about-modal.tsx  all-starred-courses-button.tsx  browse-nav.tsx  code-block-fallback.tsx  code-block.tsx  copy-button.tsx  course-navigation-menu.tsx  custom-render-link-linkify.tsx  fetch-more-in-view.tsx  global-shortcuts.tsx  header.tsx  hover-date.tsx  icons.tsx  is-online-indicator.tsx  language-combobox.tsx  layout.tsx  og-image-preview.tsx  parse-markdown.tsx  pdf-fullscreen.tsx  pdf-renderer.tsx  person-hover-card.tsx  profile-avatar.tsx  providers.tsx  recursive-file-explorer.tsx  scroll-shadow.tsx  scroll-to-top-button.tsx  search-dialog.tsx  (+10 more)
www/: components.json  package-lock.json  package.json  tailwind.config.ts
(+1262 files in other folders)
