[package]
name = "ITSDU"
version = "0.2.0"
description = "A Tauri app for students to interact with itslearning"
authors = ["Daniel Bermann Schmidt <danielz@danielz.dev>"]
edition = "2021"
license = "MIT"
homepage = "https://itsdu.danielz.dev/"
repository = "https://github.com/DanielZ1337/ITSDU"

# Add keywords for better discoverability on crates.io and other Rust registries
keywords = [
    "tauri",
    "desktop",
    "application",
    "student",
    "education",
    "itslearning",
    "sdu",
    "productivity",
    "cross-platform",
    "rust",
    "typescript",
    "react",
    "vite",
    "tailwindcss",
]

# Optionally, add categories to further classify your crate
categories = ["Application Frameworks", "Desktop Applications", "Education"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "itsdu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
reqwest = "0.12.8"
serde_qs = "0.13.0"
dotenv = "0.15.0"
hex = "0.4.3"
keyring = { version = "3.3.0", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
ring = "0.17.8"
secrecy = { version = "0.10.2", features = ["serde"] }
url = "2.5.2"
awc = { version = "3.5.1", features = ["rustls"] }
actix-cors = "0.7.0"
actix-web = "4.9.0"
tokio = "1.40.0"
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0-rc", features = [
    "deep-link",
] }
